# wichain

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  CLEANUP_AND_RUN.bat  Cargo.toml  Dockerfile  ERRORS_FIXED.md  FIX_AND_COMMIT.cmd  HOW_TO_ACCESS_BUILDS.md  INSTALL_WEBRTC.md  NATIVE_WEBRTC_SOLUTION.md  OFFLINE_FIX.md  PROJECT_DOCUMENTATION.md  README.md  RELEASE_READY.md  RUN_WEBRTC.bat  TESTING_AND_OPTIMIZATION_STRATEGY.md  TESTING_GUIDE.md  USER_GUIDE.md  VERSION_FIX_COMPLETE.md  VIDEO_CALL_FIX.md  WEBRTC_IMPLEMENTATION.md  check_network_ports.py  quick_network_check.py  run_python_tests.bat  run_tcp_proof_test.bat  setup_mongodb.bat  tcp_udp_proof_test.py  test_tcp_fix.py  test_wichain.py  trigger_tcp_connections.py
wichain-backend/: ADVANCED_FEATURES_IMPLEMENTATION.md  ALL_ISSUES_FIXED.md  ANDROID_APP_SIGNING.md  Cargo.toml  DESKTOP_FIXED_MOBILE_TERMINATED.md  DEVELOPER_GUIDE.md  EMERGENCY_DESKTOP_FIX.md  FEATURES_ADDED_SUMMARY.md  FINAL_CRITICAL_FIXES.md  INTEGRATION_COMPLETE.md  IOS_APP_SETUP.md  MOBILE_README.md  MOBILE_SIGNING_QUICK_FIX.md  NETWORK_OPTIMIZED.md  QUICK_FIX_ANDROID_HOME.md  REAL_TIME_ARCHITECTURE.md  REBUILD_MOBILE_NOW.md  REBUILD_WITH_ALL_FIXES.md  SYSTEM_ARCHITECTURE.md  SYSTEM_ARCHITECTURE_DIAGRAM.md  TAURI_MOBILE_CHECKLIST.md  TAURI_MOBILE_COMPLETE_SETUP.md  package-lock.json  package.json
wichain-backend/frontend/: ACTION_REQUIRED.md  CHOOSE_YOUR_PATH.md  CRITICAL_FIXES_FINAL.md  CRITICAL_MOBILE_FIX.md  EMERGENCY_FIX_EXPLANATION.md  FIX_NOW.md  MOBILE_CRITICAL_FIXES.md  MOBILE_CSS_FIXES.md  MOBILE_DEPLOYMENT.md  MOBILE_FIXES_SUMMARY.md  MOBILE_QUICK_REFERENCE.md  PASTE_THIS_INTO_APP.tsx  QUICK_START.md  README_MOBILE.md  STANDALONE_MOBILE_SOLUTION.md  SUMMARY_ALL_CHANGES.md  TAURI_MOBILE_NOT_LOADING.md  capacitor.config.json  index.html  package-lock.json  package.json  setup-mobile.bat  setup-mobile.sh  vite.config.ts
wichain-backend/frontend/android/app/: build.gradle
wichain-backend/frontend/src/: App.css  App.tsx  index.css  mobile.css  test-image-logic.js
wichain-backend/frontend/src/components/: AdvancedFeatures.tsx  AliasModal.tsx  AliasWizard.tsx  ChatView.tsx  GroupModal.tsx  HeaderBar.tsx  Onboarding.tsx  OnboardingSlideShow.tsx  OnboardingWizard.tsx  PeerList.tsx  ResetConfirm.tsx  TauriDebug.tsx  VideoCallWindow.tsx
wichain-backend/frontend/src/lib/: api-mobile.ts  api-unified.ts  api.ts  (+1 more)
wichain-backend/src/: lib.rs
wichain-backend/src-tauri/: Cargo.toml  debug.keystore  tauri.conf.json  wichain-release.keystore
wichain-backend/src-tauri/icons/: icon.icns
wichain-backend/src-tauri/src/: crypto_utils.rs  group_manager.rs  main.rs  mongodb_storage.rs  test_runner.rs
wichain-blockchain/: Cargo.toml
wichain-blockchain/src/: block.rs  blockchain.rs  lib.rs
wichain-core/: Cargo.toml
wichain-core/src/: lib.rs  message.rs  trust.rs
wichain-network/: Cargo.toml
wichain-network/src/: lib.rs
wichain-network/tests/: network_test.rs
(+14 files in other folders)
