[package]
name = "wichain-backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tauri = { version = "2" }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
wichain-core = { path = "../wichain-core" }
wichain-blockchain = { path = "../wichain-blockchain" }
wichain-types = { path = "../wichain-types" }
wichain-network = { path = "../wichain-network" }
ed25519-dalek = "2.2.0"
rand = "0.8"
hex = "0.4"
