[package]
name = "wichain-blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
anyhow = "1.0"
rand_core = "0.6"
rand = "0.8"


ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
wichain-core = { path = "../wichain-core" }
