[package]
name = "wichain-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }

thiserror = "1"
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
base64 = "0.22.1"
uuid = { version = "1.7", features = ["v4"] }