[package]
name = "wichain-network"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wichain-core = { path = "../wichain-core" }
anyhow = "1.0"
local-ip-address = "0.5"
rand = "0.8"
hex = "0.4"
ed25519-dalek = "2.2.0"
futures = "0.3"
tracing = "0.1.41"
