[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = { version = "2", features = ["colored"] }
# uncomment if you later expose file read/write to UI
# tauri-plugin-fs = "2.4.0"

ed25519-dalek = "2.2.0"
rand = "0.8"
hex = "0.4"
base64 = "0.22"

tokio = { version = "1", features = ["full"] }

# error helpers (used in backend init)
anyhow = "1.0"

# local crates
wichain-blockchain = { path = "../../wichain-blockchain" }
wichain-network    = { path = "../../wichain-network" }
futures = "0.3.31"
chacha20poly1305 = "0.10.1"
x25519-dalek = "2.0.1"
aes-gcm = "0.10"
sha3 = "0.10"
